client/app/shared/components/cp-topbar/cp-topbar.component.scss
@import '~styles/core/colors';
@import "~bootstrap/variables";
@import "~styles/core/typography";

nav {
  top: 0;
  z-index: 1;
  width: 100%;
  position: fixed;
  background: $color-black;

  ul {
    margin: 0;
    padding: 0;
    list-style: none;
  }

  .nav__default {
    a,
    li {
      color: $color-med-grey;
    }
    .user__name--dropdown {
      top: 35px;
      border-radius: 0;

      li {
        display: block;
        a {
          margin: 0;
          padding: 10px;
        }
      }
    }
  }
  .nav__links li a {
    color: $color-med-grey;
  }

  .nav__links li,
  .nav__default li {
    display: inline-block;
    vertical-align: middle;

    &.active {
      a {
        color: $color-white;
      }
    }

    a,
    &.user__name {
      font-size: 1em;
      padding: 25px 10px;
    }

    a {
      display: block;

      &:focus,
      &:hover,
      &:active {
        text-decoration: none;
      }
    }

    &:last-child {
      margin-right: 0;
    }
  }
}

